@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added UI for managing website field in modUserProfile
 - Added website field to modUserProfile
 - Removed unnecessary and problematic editor dropdown in chunk editing screen
 - Sped up drag/drop of reordering in tree by now only framing moved nodes instead of refreshing
